SSCSFT-101 New Workflow Visibility